Calendar; change class name to one that makes sense and use it to stop user attendance image overflowing

--- a/core/theme/default/css/commonIndexAndSite/calendar.less
+++ b/core/theme/default/css/commonIndexAndSite/calendar.less
@@ -181,6 +181,9 @@ table.calendar {
 				text-decoration: none;
 			}
 		}
+		.below {
+			clear: both;
+		}
 	}
 	.deleted {
 		background: url('/theme/default/img/deletedBackground.png');
